--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,16 @@ jobs:
         with:
           tinytex: true
 
+      # you can omit this step if you are not using R
+      - name: Set up R
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages:
+            any::knitr
+            any::rmarkdown
+            any::downlit
+            any::xml2
+
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
