--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,11 +19,14 @@ jobs:
         with:
           tinytex: true
 
-      # you can omit this step if you are not using R
-      - name: Set up R
-        uses: r-lib/actions/setup-r-dependencies@v2
+
+      - uses: r-lib/actions/setup-r@v2
         with:
-          packages:
+          use-public-rspm: true
+
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages:
             any::knitr
             any::rmarkdown
             any::downlit
