--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,14 +19,13 @@ jobs:
         with:
           tinytex: true
 
-
+      # you can omit these steps if you are not using R
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages:
+          packages:
             any::knitr
             any::rmarkdown
             any::downlit
