add expertise bullet to review instructions

--- a/.github/ISSUE_TEMPLATE/review.yml
+++ b/.github/ISSUE_TEMPLATE/review.yml
@@ -47,6 +47,8 @@ body:
       
       - the clarity of its evidence (if relevant).
 
+      - if there are any areas of the paper you feel you do not have the expertise to review, if applicable.
+
       
       We do not prioritize novelty in the same way that e.g. VIS or CHI do. A replication study, 
       for example, also advances our collective knowledge in that it either confirms or disputes 
